# Caso1_Detenci-n_de_melanomas

./: .gitignore  README.md  app.py  codigo.ipynb  git reset --hard 6a3ef86  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
test/: gpu_test.ipynb
